--- a/src/samples/aspnet/Elsa.Samples.AspNet.HelloWorld/Properties/launchSettings.json
+++ b/src/samples/aspnet/Elsa.Samples.AspNet.HelloWorld/Properties/launchSettings.json
@@ -4,7 +4,9 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
+        "OTLP_ENDPOINT_URL": "http://localhost:4317"
       },
       "applicationUrl": "https://localhost:58521;http://localhost:58522"
     }
